--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="This is a portfolio for front end developer">
+
   <title>Portfolio</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -53,42 +57,42 @@
     <div class=" portfolio-content">
       <div class="wrapper">
         <div class="card animated fadeInLeft">
-          <img class="card-image" src="https://lh3.googleusercontent.com/WL77u4QHxwlb4ZpvOXeAFJyctSeg5AY-KzhZ2w1fSh-lf_2auK4BA5qpiFP9Z9yTn62YzWHIJ3aaYf9H8lkZpNiXG0evs8phAYKkbSnfcAg1BVDJGm0OqLmUOfLPfCo8z40zfzqHQwt4Kgu0q6UTrcB7I5SvtrsSXfSG5y8k0f_h1NmoySsmCg0EWyBT-ursj81Qee6tGB8cP1EmCfPiyOGDRPo3-CmXcBTNP72O2pdnLexf6tAZJuFsViIwCVfU8j-50BbO3laeQ6lYkOgN4ohnKHP9gzHGFeIAzkOeRT5vjvLxcrZgxtOI6ywzE2Hl1sTC7mcJ72fOAEIEoSlwIkTUqxpd0s5GLX-GrDMXU7odVU8-Ib5VOHdXsGY2NTfxJJg_i1_8VXkLmnMRtRQ25OWV2nkqrLo2gAQGuMfYr8fRGgtUnyJK-A816LBeLW8UKXeRzTunZeEFaAwXrwiAkbNozGDBozlTUtt9e2EwCBhcQQ28F708vgto8Ssba_UMrnhMdc5O0CTwTw658xZyT3UrxUXZRtYXTPf6S0UO61DoEb6RwtMTB7DVoBsHADUDGlraWIucbLKksLZVo0gLWW0zr1Coi1m_Cf9KGuPxRA=w744-h773-no" alt="Calculator-Project">
+          <img class="card-image" src="calculator.png" alt="Calculator-Project">
           <div class="card-overlay">
             <h4 class="card-overlay-title"><a href="http://mthinh-calculator.surge.sh/" target="_blank">Calculator</a></h4>
             <p class="card-overlay-text">You can do some simple Math with my calculator</p>
           </div>
         </div>
         <div class="card animated fadeInDown">
-          <img class="card-image" src="https://lh3.googleusercontent.com/w9z4Q-4Kk8lqp6PU5ZyPvUVQ6xDjKGBskhDXInnr_E1btHBX1NTfGztY00neL8aLmKxI0xJ1EBbGrGdGj-xRk7bJVmDjI-RNJZ-vKR3UE6iS7FGTqV1Uy28w3IR44PJIW1lfiGO0Zjb4IMSvZxGw3ZWf4b9Zaf2RdpNpTxLfqsqBj1FBLDr2F_XWGF6iq-HHUYN2uR1LlZQljbhP8I9RQFCFyuMk9gY9uQNmNAnigH3_ciztgVqm8Gzvjy8gM1IrM03ksKWi8_zqll6ABCQGEAleq0l0knukiW0UJetAbzStQk0QEX2F49fMKJ0ep9DqLJD1rSOIILi88Vo4iYDMA_5X7sdUYNjBE6Q-mX4_I_78lZIaseFeHU9L4zsuqCALZRvq08i4tgsexoryQo5uzl8wGXVtGCc5Yctpl8zFQ6ewhvG_b8Ivavq3MIxLzm5EItd6SBbbsPaxvcfd_kxS13brHN8FcWBO_ZdzuNAaSXeT2wmL2IOPrN8u3IpU3G6Zf3B27bbyShIG0WaVLomkCPrSJoSaC7O4bqaHPxjbDWuwNi5g2vlCGrnTJ7KKt_DB3tixOkAodYD6rP0WRI1pWsLROrgeLzTb_tKc6QHPZA=w815-h659-no" alt="PomodoroClock-Project">  
+          <img class="card-image" src="pomodoro.png" alt="PomodoroClock-Project">  
           <div class="card-overlay">
             <h4 class="card-overlay-title"><a href="http://mthinh-pomodoro.surge.sh/" target="_blank">Pomodoro Clock</a></h4>
             <p class="card-overlay-text">Pomodoro clock helps you manage your time and work efficiently</p>
           </div>
         </div>
         <div class="card animated fadeInRight">
-          <img class="card-image" src="https://lh3.googleusercontent.com/0oiuphI35oCwwSia322Gs9kGGiPm4LYCdDexJg9HeifBlFPnur3D4KPRKnFhV1aAaRtFB1GwsT4OkW4-Q7iTH4tE7MYVCxJdGs23Ku5gmg26c4OTNdjBVeW8DQMc56dANtEjmTOy5d6cjrc8y1usba0KFqx7mbsXrLW_qvxpjvO7Kr0s5KFMQN8nlXLm4s9q6Ci3C-z4eMkiVvsGHyDRWk8rmmX95jvfKMw_uChuqGT1alVM7H5i04muieHTl7ICBuSjKkw8qn2OfdN4fZe1d78lJfyAbA_QXU-t0NIJtqUOAgxOU1V4nn3lS0XHgwVgHy8zl9bkdxkp0YR06vPGBB8DMDn296lHz9Bqrz0wQb1GOxV9Mq1YGYdnIiIgsb5pGoG2XOU3f1rYn1gzpWiI5CJPp0rGe_i5RLQ9YFx2_xr-cIcAHkW788LcXxDlPIK51Ju0w4_meiDqojRnTKI5toGhB69t4b2S2-kvavk7CfdNICLwD6BxDyyngF76Lefnnt8lZ9pHOkShNY5zukl_mK6RRFJBBbSENxIPFBYumkf2g9ymdZbOz78AcZQFzQRvCro6npo3cOrUPPd_8woLAI5Vv_LB0TfGCGnwBbglyQ=w840-h672-no" alt="SimonGame-Project">  
+          <img class="card-image" src="simongame.png" alt="SimonGame-Project">  
           <div class="card-overlay">
             <h4 class="card-overlay-title"><a href="http://mthinh-simongame.surge.sh/" target="_blank">Simon Game</a></h4>
             <p class="card-overlay-text">A funny old game challenges your memory</p>
           </div>
         </div>
         <div class="card animated bounceInLeft">
-          <img class="card-image" src="https://lh3.googleusercontent.com/2glwo1mX92ujgJrnt_Fh7QOMyQJogTpPm5eBr71G5agiMgaQJQSbEe5jyGgmRQEjgShpRVODuZ0ROiJzvOcVyq5CLxD37afEuNOkCNi9txWpOoU2yd4TChM4SY6QF7dEQGEMFOvn8AL1V1iRraHkYQCvXAcDiZBvDG7vsX-EATLUxRd3VKHzRROPULHCQmPqiEL-3Q4zFuINVUXt-H9Ug-Daa48ScqJBUP60YC-khK619pXKWifaUqRXPW4uIFUtHlG3aYklG_1w6g1IJY5ZAZCE7rW7ZmehiKraUGhDmmXQYC05Onvgq9LrFzL2FLq4-oBHS87xHAObuxq005glVsAomsf4zBdqsYofIJxAUukcSwJPzrgf_vhHI3lV-l5LNsBMYJ-V_QkqwMfeLNergFw-9z7VhlQonmLyH05zcKAFtD7WbdYm62cOzSgtfQaYYtiVoK1BJfw5vjncVmSmoF1-fxMD8SivnxlOPwlbh3CNc-YtmxvDT33rjLsLJLyGQJl7phaQg4YYLrYUfiCBk4751SeLV1vMgMHQMOCPG2vAIthImRK5Cgn8Os-xODtzz9isVpyLXNvBsEV-RmtQk4EUpBuNb-54YFbhUrR4kQ=w1708-h960-no" alt="Recipe Box WithReact-project">  
+          <img class="card-image" src="recipebox.png" alt="Recipe Box WithReact-project">  
           <div class="card-overlay">
             <h4 class="card-overlay-title"><a href="http://mthinh-recipebox.surge.sh/" target="_blank">Recipe Box</a></h4>
             <p class="card-overlay-text">I built this app with react. It helps you save your favorite recipe</p>
           </div>
         </div>
         <div class="card animated bounceInUp">
-          <img class="card-image" src="https://lh3.googleusercontent.com/YAqXve8udvjEy5w_kJw45nqsXc3Nozmm-7wEtZsQWOhHxaInTOgI8OX5md0elJd1x4_pjPS2AXARMoTejoGKeVgK5YGL0gdbNZ6BhzQQXPyL9YZB2NseNyJfj_l44z7z-QknOsFhqs_CSMArod5sH-lWz05w1RLcaUE8cNr72w6-09nlI5hKDUZ35soLq1otdcwFjupArH8xZC23JpKmEVQeb7GND-wYlwURhT5EkHEblcOyQ1udrCmOOM8OTNV_jX5PG_2MPhwWlRtcu-JbtHS1rSoUVzQx7tL8vWcNZlf6SMQUJ7sX33EtycPUDRT3JT2cbpMEBREWDeYi_7aS9ADJ0XLSuPIQt8mRhUya1GMx1y2MYna_6PE8TqmvtJ44eQPTKxWkhE5y_1tDs7Koy6L6jFFuKO2Ze64jASo9HCp9kVv1RJcXyYi1Pz6q3klkz4OY-IIPMxqy9oWnMwL6RsXzTSUbBd6COYpQV__k_tcVdyZb9cBu28bOyjw1Wm__nleGkqZ2XuIUtKSijDAA-iwIo3OVjyzzAhZchiaaGleA-Pn0aRCgYqv_RtNQCum3RxX6yrG70C_cxT5FfuPJCYx9-UgSZ2LrS0XQpyYmaw=w1708-h960-no" alt="Camper Leaderboard Project">  
+          <img class="card-image" src="leaderboard.png" alt="Camper Leaderboard Project">  
           <div class="card-overlay">
             <h4 class="card-overlay-title"><a href="http://mthinh-leaderboard.surge.sh/" target="_blank">The Camper Leaderboard</a></h4>
             <p class="card-overlay-text">It shows you top 100 campers who usually contribute to freeCodeCamp community</p>
           </div>
         </div>
         <div class="card animated bounceInRight">
-          <img class="card-image" src="https://lh3.googleusercontent.com/wPBE48udAmNdTJwdezglA53yuv81fNvjKCn8ToKYEess4-6YtbWnUgkwDCq7kGC8U-oT-seWXObT-VLaoNzR-v2LZ5pKief7gFVTQIsGYI9p0YdPWFQ0ti6jz_z72BcLJeRc1-wG8WaAfeZCYkO43e83Z1n7UBbg-heGnekLp5L9rpC1rDCo_z-Cf9myU1vrJSGfk5Brzzyz2Cf4VKhwU3XcNF_PRO_TepxqwcnquNxF9la4H8dlGcGAMuLXbz6mZJwyKpW2Xr284nWKIwy4aqhVt4-1iOiD2TSS5RcG9gSZGIFYUZ8K423VOO2lrFd6kNltYBvZVuSSOfm3Pa8fAD_w_oiWxmmeVEG36nueosfQU8Bx_MQmitXEM8CmcrCP4Op88YlnJRNZvlLVksUieBTzHC1Ipp5LPQjOTl_qHqSIQFUqO1-oRRLRRNegO_Mj009oGdqBJJhbEgJ2ROXDqVxS8ZikSVMsK1yWiqtpVzW7nYlzgsxWBvh4meBFmn87KjHPGPBLdrqf4udnUt3s-CzzXDUiDGRTkYFisyOlszJxMpRR2N-4-xFYLslvV9g9HyOb1HzcUMjSpZp1mh-BjQKiu_SU87_F6WSMuTLkeg=w830-h689-no" alt="Show Local Weather App">  
+          <img class="card-image" src="showweather.png" alt="Show Local Weather App">  
           <div class="card-overlay">
             <h4 class="card-overlay-title"><a href="http://mthinh-showweather.surge.sh/" target="_blank">Show Local Weather</a></h4>
             <p class="card-overlay-text">It shows you your local current weather</p>
